<resources>
    <string name="app_name">ThatApp</string>
    <string name="title_activity_user_home">UserHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_order">Order</string>
    <string name="menu_product">Product</string>
    <string name="menu_deliver">Deliver</string>
    <string name="menu_message">Message</string>
    <string name="menu_about">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="project_description">Description</string>
    <string name="description">
        App Name: BSIC(Buy and Sell in Campus)\n
        Technology: Android \n
        Group Members:\n
        Raju Kumar -17BCA1357\n
        Amit Dubey -17BCA1378\n
        Sourav Thakur -17BCA136\n

    </string>
</resources>
