<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_order" />
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_product" />
        <item
            android:id="@+id/nav_deliver"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_deliver" />
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_message" />

    </group>
</menu>
