<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.thatapp.user.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
    </fragment>
    <fragment
        android:id="@+id/nav_order"
        android:name="com.example.thatapp.user.ui.orders.OrderFragment"
        android:label="@string/menu_order"
        tools:layout="@layout/fragment_order">
    </fragment>
    <fragment
        android:id="@+id/nav_product"
        android:name="com.example.thatapp.user.ui.product.AddProductFragment"
        android:label="@string/menu_product"
        tools:layout="@layout/fragment_add_product">
    </fragment>

</navigation>